<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/titulo_del_elemento"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/descripcion_del_elemento"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/boton"
        android:text="@string/boton"
        android:textAlignment="textStart"
        android:visibility="visible"
        tools:text="VOLVER A LA PÁGINA PRINCIPAL"
        tools:visibility="visible"
        tools:ignore="RtlCompat" />
</LinearLayout>
